<resources>
    <string name="app_name">Examen de Registro</string>
    <string name="action_settings">Settings</string>
    <string name="splash">Exámen teórico para sacar el registro de conducir</string>
    <string name="splash_categoria">CATEGORIA</string>
    <string name="splash_b">B</string>
    <string name="correct_toast">CORRECTO</string>
    <string name="incorrect_toast">INCORRECTO</string>
    <string name="question_1">Cuando se debe cruzar la acera (vereda) para salir a la vía pública ¿de quién se presume que es la responsabilidad si se produce un accidente con un peatón u otro vehículo? </string>
    <string name="answer_1_option_A">A. Del conductor del vehículo que sale a la vía pública.</string>
    <string name="answer_1_option_C">B. Del peatón, por no tomar la precaución al llegar a una salida de vehículos.</string>
    <string name="answer_1_option_B">C. Del conductor del otro vehículo, por no tener cuidado.</string>
    <string name="question_2">En algunas vías de tránsito podemos encontrar marcas en el piso o bien carteles con signos similares a una V invertida ¿qué significados tienen esos signos o marcas? </string>
    <string name="answer_2_option_A">A. Que estamos en una zona donde frecuentemente hay niebla.</string>
    <string name="answer_2_option_B">B. Que estamos en una zona de velocidad controlada (radar).</string>
    <string name="answer_2_option_C">C. Que estamos en una zona que se inunda.</string>
    <string name="question_3">¿Quién es el responsable civil por un accidente de tránsito producido por un menor de edad poseedor de una licencia de conductor? </string>
    <string name="answer_3_option_A">A. El que lo acompaña.</string>
    <string name="answer_3_option_B">B. El que firmó la autorización para obtener la licencia.</string>
    <string name="answer_3_option_C">C. El que le autorizó el uso del vehículo.</string>
    <string name="question_4">Cuando se estaciona en proximidad de una esquina ¿qué línea no debe superarse? </string>
    <string name="answer_4_option_A">A. La línea peatonal.</string>
    <string name="answer_4_option_B">B. La línea imaginaria de prolongación de ochava.</string>
    <string name="answer_4_option_C">C. La línea de edificación transversal.</string>
    <string name="question_5">En materia de señalamiento horizontal o demarcación horizontal ¿qué se entiende por "isleta"? </string>
    <string name="answer_5_option_A">A. Son las marcas canalizadoras y orientadoras de tránsito. No se puede traspasar o circular sobre ellas.</string>
    <string name="answer_5_option_B">B. Son marcas en la calzada que indican lugares donde está permitido detenerse.</string>
    <string name="answer_5_option_C">C. Son marcas en la calzada que indican lugares donde está permitido estacionarse y/o detenerse.</string>
    <string name="question_6">Con carácter general, cuando nos encontramos con una señal de "PROHIBIDO ESTACIONAR" ¿está permitido parar para subir o bajar pasajeros de un automóvil?"</string>
    <string name="answer_6_option_A">A. Si.</string>
    <string name="answer_6_option_B">B. No.</string>
    <string name="answer_6_option_C">C. Según la hora.</string>
    <string name="question_7">¿Qué significa el término “culposo” en materia de accidentes de tránsito?</string>
    <string name="answer_7_option_A">A. Que es responsable por actuar con intención de provocar un daño.</string>
    <string name="answer_7_option_B">B. Que no obró con intención de provocar un daño.</string>
    <string name="answer_7_option_C">C. Que no estaba habilitado para conducir.</string>
    <string name="question_8">¿Cómo debe indicar a un vehículo que pretende sobrepasar al suyo que no debe hacerlo?</string>
    <string name="answer_8_option_A">A. Encendiendo las luces llamadas balizas.</string>
    <string name="answer_8_option_B">B. Accionando la luz indicadora de giro a la izquierda.</string>
    <string name="answer_8_option_C">C. Accionando la luz indicadora de giro a la derecha.</string>
    <string name="question_9">En la ciudad ¿está permitido circular marcha atrás?</string>
    <string name="answer_9_option_A">A. Sólo para estacionar, entrar o salir de un garaje (cuando no hay otra posibilidad) o salvar un obstáculo.</string>
    <string name="answer_9_option_B">B. Cuando es por pocos metros.</string>
    <string name="answer_9_option_C">C. Solamente de día.</string>
    <string name="question_10">¿Qué distancia debe dejarse libre cuando se va a estacionar frente a la entrada de hospitales, escuelas, templos u otros organismos públicos?</string>
    <string name="answer_10_option_A">A. 10 metros de cada lado de la entrada.</string>
    <string name="answer_10_option_B">B. Todo el frente del edificio.</string>
    <string name="answer_10_option_C">C. 5 metros de cada lado de la entrada.</string>
    <string name="question_11">Si circula con su vehículo en un día de niebla ¿qué precaución, entre otras, debe tomar?</string>
    <string name="answer_11_option_A">A. Adaptar la velocidad del vehículo a la visibilidad de la vía.</string>
    <string name="answer_11_option_B">B. Dejar una distancia mínima de 50 metros respecto del vehículo que circula delante.</string>
    <string name="answer_11_option_C">C. No efectuar ninguna maniobra.</string>
    <string name="question_12">Si para adelantar debe invadir un carril exclusivo para colectivos y taxis ¿le está permitido realizar la maniobra?</string>
    <string name="answer_12_option_A">A. No, porque está prohibido utilizar dicho carril.</string>
    <string name="answer_12_option_B">B. Sí, cuando la línea longitudinal del lado exterior de este carril sea discontinua.</string>
    <string name="answer_12_option_C">C. Sí, porque sólo se permite su utilización para realizar alguna maniobra.</string>
    <string name="question_13">En una autopista, ¿está permitido remolcar con su vehículo a otro que se encuentra descompuesto?</string>
    <string name="answer_13_option_A">A. Sí, pero sólo hasta el lugar más próximo donde pueda quedar inmovilizado.</string>
    <string name="answer_13_option_B">C. No, porque está prohibido.</string>
    <string name="answer_13_option_C">B. Sí, pero sólo si soy titular de un permiso que autoriza a conducir vehículos con remolque.</string>
    <string name="question_14">Ud. ha adelantado a otro vehículo en una intersección. ¿Es correcto su comportamiento?</string>
    <string name="answer_14_option_A">A. Sí, porque en este caso tengo prioridad de paso en la intersección.</string>
    <string name="answer_14_option_B">B. No, porque en las intersecciones siempre está prohibido adelantar.</string>
    <string name="answer_14_option_C">C. No, porque sólo está permitido adelantar en las intersecciones con rotonda.</string>
    <string name="question_15">15)Todo vehículo debe estar cubierto por un seguro ¿qué daños debe cubrir el mismo?</string>
    <string name="answer_15_option_A">A. Debe cubrir eventuales daños causados a terceros transportados o no.</string>
    <string name="answer_15_option_B">B. Debe cubrir eventuales daños causados a terceros transportados únicamente.</string>
    <string name="answer_15_option_C">C. Debe cubrir los daños causados a los vehículos únicamente.</string>
    <string name="question_16">Por norma general, las luces traseras de los vehículos deben ser de color rojo (de posición y freno) y amarillas (giros) ¿por qué la luz de marcha atrás debe ser blanca?</string>
    <string name="answer_16_option_A">A. Porque así se las diferencia de las luces de freno, de posición y de las luces de giro.</string>
    <string name="answer_16_option_B">B. Porque indica el sentido de circulación. La luz blanca significa que el vehículo circula en sentido contrario al nuestro.</string>
    <string name="answer_16_option_C">C. Porque por su color blanco se obtiene mejor visión cuando la maniobra de retroceso se deba realizar de noche o en condiciones de poca visibilidad.</string>
    <string name="question_17">El que conduce un vehículo ¿qué documentación personal debe llevar consigo?</string>
    <string name="answer_17_option_A">A. La licencia de conductor es suficiente.</string>
    <string name="answer_17_option_B">B. La licencia de conductor y su documento de identidad.</string>
    <string name="answer_17_option_C">C. La licencia de conductor, su documento de identidad y la cédula verde.</string>
    <string name="question_18">¿Está permitido en los vehículos agregar en los paragolpes aditamentos (defensas, etc.) de cualquier naturaleza, que puedan considerarse peligrosos para personas u otros vehículos?</string>
    <string name="answer_18_option_A">A. No está permitido modificar paragolpes originales de fábrica agregándoles elementos que puedan considerarse peligrosos o agresivos.</string>
    <string name="answer_18_option_B">B. Pueden agregarse defensas en vehículos pequeños.</string>
    <string name="answer_18_option_C">C. Depende de la zona donde se circule.</string>
    <string name="question_19">Las balizas portátiles que es obligatorio llevar en los vehículos ¿deben ser los conocidos triángulos reflectivos o pueden ser de otro tipo?</string>
    <string name="answer_19_option_A">A. Deben ser únicamente los triángulos reflectivos.</string>
    <string name="answer_19_option_B">B. Pueden ser otras, incluso eléctricas, pero deben ser de igual o mayor eficacia que los triángulos.</string>
    <string name="answer_19_option_C">C. Depende del vehículo.</string>
    <string name="question_20">¿Cuándo está permitido estacionar en ángulo con el cordón de la acera derecha y/o izquierda?</string>
    <string name="answer_20_option_A">A. Sólo cuando la calle es ancha.</string>
    <string name="answer_20_option_B">B. Sólo cuando el señalamiento lo indica.</string>
    <string name="answer_20_option_C">C. Sólo cuando es de un lado solamente.</string>
    <string name="question_21">¿Qué identifica la Cruz de San Andrés?</string>
    <string name="answer_21_option_A">A. Cruce de caminos.</string>
    <string name="answer_21_option_B">B. Cruce de vías férreas.</string>
    <string name="answer_21_option_C">C. Cruce de peatones.</string>
    <string name="question_22">Si Ud. sale de un estacionamiento paralelo al cordón, previamente debe:</string>
    <string name="answer_22_option_A">A. Tocar bocina e incorporarse al tránsito pasante.</string>
    <string name="answer_22_option_B">B. Salir con precaución cuando no haya tránsito pasante y colocar la luz de giro.</string>
    <string name="answer_22_option_C">C. Salir lo más rápido posible porque tiene prioridad.</string>
    <string name="question_23">¿Qué debe hacer si observa que un vehículo está a punto de alcanzarlo y pasarlo?</string>
    <string name="answer_23_option_A">A. Ceñirse bien a la derecha, y si es necesario, bajar la velocidad.</string>
    <string name="answer_23_option_B">B. Aumentar la velocidad.</string>
    <string name="answer_23_option_C">C. Es indiferente la velocidad de su vehículo.</string>
    <string name="question_24">En zona rural, cuando un peatón transita por la banquina ¿por qué lado debe caminar?</string>
    <string name="answer_24_option_A">A. Caminar en sentido contrario al tránsito que viene hacia él.</string>
    <string name="answer_24_option_B">B. Transitar lo más próximo a la ruta.</string>
    <string name="answer_24_option_C">C. Caminar en el mismo sentido que el tránsito.</string>
    <string name="question_25">¿Qué es un carril de circulación vehicular?</string>
    <string name="answer_25_option_A">C. Franja de la calzada por donde circulan los vehículos en una fila.</string>
    <string name="answer_25_option_B">B. Banquina de la derecha.</string>
    <string name="answer_25_option_C">A. Banquina de la izquierda.</string>
    <string name="question_26">¿Cuál es la forma correcta de adelantarse a otro vehículo?</string>
    <string name="answer_26_option_A">C. Por la izquierda, haciendo las señales respectivas.</string>
</resources>