<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdd835">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash"
        android:id="@+id/SplashScreen"
        android:layout_gravity="center_vertical"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_above="@+id/progressBar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_categoria"
        android:textColor="#ffffff"
        android:textSize="22dp"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_b"
        android:id="@+id/textView2"
        android:textSize="100dp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
